# cpp_learning

movie-fan/: CMakeLists.txt  bootstrap.sh  compile_commands.json  vcpkg.json
movie-fan/src/: Movies.ixx  main.cpp  utilities.ixx
movie-fan/src/classes/: Movie.cpp  Movie.hpp
overloading/: CMakeLists.txt  vcpkg.json
overloading/src/: main.cpp
overloading/src/classes/: MyString.cpp  MyString.hpp
staticproj/: .env  CMakeLists.txt  vcpkg.json
staticproj/src/: main.cpp  utilities.ixx
staticproj/src/classes/: Player.cpp  Player.hpp
thisproj/: CMakeLists.txt  CMakePresets.json  vcpkg.json
thisproj/src/: main.cpp
thisproj/src/classes/: Player.cpp  Player.hpp
